--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -292,6 +292,16 @@
   url = {https://www.jstor.org/stable/4017680}
 }
 
+@article{fabre_international_2023,
+  title = {International {{Attitudes Toward Global Policies}}},
+  author = {Fabre, Adrien and Douenne, Thomas and Mattauch, Linus},
+  year = {2023},
+  journal = {FAERE Working Paper},
+  issn = {1556-5068},
+  doi = {10.2139/ssrn.4448523},
+  url = {https://www.ssrn.com/abstract=4448523}
+}
+
 @techreport{gradin_trends_2021,
   type = {Working {{Paper}}},
   title = {Trends in Global Inequality Using a New Integrated Dataset},
