--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -211,12 +211,11 @@ This paper analyses the prospects for achieving this goal country by country. Wi
 
 \section{Introduction}% NCCcomment
 
-The %very % TODO? very?
-first Sustainable Development Goal (SDG) reads: ``By 2030, eradicate extreme poverty for all people everywhere, currently measured as people living on less than \$2.15 a day''. As we have passed the halfway point since the adoption of the SDGs in 2015, it is time to assess progress towards this universally accepted goal. 
+The very first Sustainable Development Goal (SDG) % SDG 1.1
+reads: ``By 2030, eradicate extreme poverty for all people everywhere, currently measured as people living on less than \$2.15 a day''. As we have passed the halfway point since the adoption of the SDGs in 2015, it is time to assess progress towards this universally accepted goal. 
 
 In this paper, I assess whether growth and domestic redistribution are sufficient to eradicate extreme poverty by 2030. I first study the extent of poverty in different growth scenarios. Then, I calculate the magnitude of domestic redistribution required in each country to eradicate poverty in 2030. I mobilize different indicators. I estimate the parameter of two tax policies that would raise enough revenues to eradicate poverty. In the ``antipoverty cap'', I fix the rate (at 100\%) and find the required taxation threshold. In the ``antipoverty tax'', I fix the threshold and find the rate needed. As a last indicator, I fix both the threshold and the rate and compute the income floor that the tax could finance. In the lowest income countries, extreme poverty is estimated to persist even after strong growth and radical redistribution. % add idealized domestic policies to redistribute income. 
-This has implications for the international community, as international solidarity appears % TODO? to be?
-the only way to achieve the first SDG. I complete the analysis by exemplifying international transfers that would eradicate poverty by 2030.
+This has implications for the international community, as international solidarity appears to be the only way to achieve the first SDG. I complete the analysis by exemplifying international transfers that would eradicate poverty by 2030.
 
 \paragraph{Literature} 
 % “As things stand, the world is not on track to end poverty by 2030,” (UN, 22)
@@ -236,10 +235,9 @@ Second, BCL study the data as it stands rather than imputing growth and using it
 Consistently with Ravallion (2010), Hoy \& Sumner (2016) find that 52\% of global extreme poverty can be eliminated with a 50\% antipoverty tax above \$$_\text{2011}$10/day (in 2011 PPP). They also consider the reallocation of public spending and show that this antipoverty tax together with the reallocation of fossil-fuel subsidies and military spending could eliminate 77\% of global extreme poverty. Finally, they show that countries with GDP per capita below \$$_\text{2011}$2,000 per year do not have the domestic capacity to eradicate extreme poverty (measured as an antipoverty tax below 50\%).\cite{hoy_gasoline_2016} 
 % They find that with growth alone, and if each country's growth persists at the same level, extreme poverty will only end in 2224. %This is likely to be an underestimate as it is only based on countries where there was positive growth in survey means over the last ten years. 
 
-% TODO add something like: the literature already shows that...
-With growth alone, and if each country's growth persists at the same level, it would take more than a century --- and a global GDP exceeding \$100,000 per year --- to end extreme poverty.\cite{woodward_incrementum_2015} % TODO? cite ravallion_how_2013 on this? or on paragraph below? It is not as good as it just extends the trends of poverty headcounts
-Ortiz et al. (2018) estimate the cost relative to GDP of a basic income at the national poverty line. % shorten
-In low-income countries, the national poverty line is on average equal to 79\% of the GDP, and 8 countries have a GDP below the national poverty line (which is often itself below \$2.15/day).\cite{ortiz_universal_2018}
+Previous studies also show that with growth alone, and if each country's growth persists at the same level, it would take more than a century --- and a global GDP exceeding \$100,000 per year --- to end extreme poverty.\cite{woodward_incrementum_2015} % TODO? cite ravallion_how_2013 on this? or on paragraph below? It is not as good as it just extends the trends of poverty headcounts
+% Ortiz et al. (2018) estimate the cost relative to GDP of a basic income at the national poverty line. % shorten
+In low-income countries, financing a basic income at the poverty line is out of reach as the national poverty line is on average equal to 79\% of the GDP, and 8 countries have a GDP below this line (which is often itself below \$2.15/day).\cite{ortiz_universal_2018}
 % Difference with Hoy & Sumner (16) (who do almost the same thing (and even include reallocation of fuel subsidies and excess military spending), take 50% marginal tax > 10$/d as maximum);
 % Ortiz et al (18) ( computing the costs of an UBI at the national poverty line (Figure 2, 3)). 
 
@@ -265,7 +263,7 @@ Low-income countries do not have the resources to afford basic healthcare, educa
 % Not clear which is more accurate between survey and national accounts (Deaton 05), especially in low-income countries, as agricultural production is indirectly measured in national accounts. Also, in Africa, mean conso is similar between national accounts and surveys (Deaton 05). Also, WIID adjust to GDP PPP but I should adjust to national conso, not GDP. Martinez (22) shows that autocracies overestimate GDP growth by 35%. 
 % Prydz et al. (22) argue that NAS are more accurate but show that the discrepancy between survey mean consumption and NAS HFCE is not that large: 22%, and 13.7% for low-income countries. HFCE is broader (and encompasses spending of non-profit entities like NGOs). => Also, if one scales up the conso distribution, one should also scale up the poverty line (as it is based on conso surveys): if one does that, poverty rates are on average the same, they change due to variation in survey/NAS discrepancies. 
 % I can adjust to HFCE as robustness check https://data.worldbank.org/indicator/NE.CON.PRVT.PP.KD with the assumption that the extra money is held by the rich (>13$/day), 
-The percentiles of each country's post-tax income (or consumption) are estimated by the Poverty and Inequality Platform (PIP) of the World Bank (ex-PovcalNet). PIP aggregates the most recent household surveys (60\% of countries were surveyed between 2018 and 2021). This data is based on purchasing power parity (PPP) and given in constant 2017 \$. % TODO: condense in one sentence this paragraph and the following sentence; put Data/ to appendix
+The percentiles of each country's post-tax income (or consumption) are estimated by the Poverty and Inequality Platform (PIP) of the World Bank (ex-PovcalNet). PIP aggregates the most recent household surveys (60\% of countries were surveyed between 2018 and 2021). This data is based on purchasing power parity (PPP) and given in constant 2017 \$. % TODO! condense in one sentence this paragraph and the following sentence; put Data/ to appendix
 
 In low-income countries (those of greatest interest to us), PIP provides data on per capita \textit{consumption} (rather than income). Thereby, the data does not capture services procured by the government. Another potential concern with household surveys is that the aggregate (national) consumption they imply is generally lower than the one estimated in national accounts.\cite{deaton_measuring_2005,prydz_disparities_2022} This discrepancy comes from measurement errors on both sides: on the one hand, household surveys suffer from underreporting of top incomes and large expenditures; on the other hand, national accounts do not properly account for informal work %and auto-consumption, % TODO? cite? Deaton (2001) argues that in India approximately half of the gap between national accounts consumption and household surveys is due to imputed rents
 and tend to inflate agricultural output.\cite{angrist_why_2021} 
@@ -273,8 +271,7 @@ Furthermore, authoritarian countries have been shown to produce inflated GDP sta
 While Household Final Consumption Expenditures (HFCE) from national accounts is 44\% greater than the aggregate consumption from household surveys, the ``discrepancy ratio'' is largest for middle-income countries and is only 12\% for low-income countries. 
 Because household surveys are best suited to estimate consumption by the poorest, I use unadjusted PIP data as a baseline. 
 
-As a robustness check, I also re-derive the main results % TODO! main figures and table with HFCE adjustment 
-after adjusting aggregate consumption by the discrepancy ratio (computed using World Bank data). In line with the literature,\cite{lakner_global_2013,anand_chapter_2015} I impute the extra consumption to the top percentile. I do not perform the rescaling on the 15\% of countries (like Burundi or the D.R.C.) with HFCE lower than its aggregate consumption from PIP, and I assume a discrepancy ratio of +12\% for the 20\% of countries lacking data on HFCE. 
+As a robustness check, I also re-derive the main results after adjusting aggregate consumption by the discrepancy ratio (computed using World Bank data). In line with the literature,\cite{lakner_global_2013,anand_chapter_2015} I impute the extra consumption to the top percentile. I do not perform the rescaling on the 15\% of countries (like Burundi or the D.R.C.) with HFCE lower than its aggregate consumption from PIP, and I assume a discrepancy ratio of +12\% for the 20\% of countries lacking data on HFCE. 
 
 As is common in this literature,\cite{karver_mdgs_2012,hellebrandt_future_2015,bicaba_can_2017} my baseline assumes ``balanced growth'', meaning that each percentile grows at the same rate between the country's survey year and 2030. 
 I rescale incomes by the observed growth of GDP p.c. (in PPP) up to 2022 (using World Bank data) and by different methods for the 2022--2030 period. 
@@ -304,7 +301,7 @@ As we cannot rely on growth alone to eliminate poverty, let us add domestic redi
 Studying the arithmetics of inequality at the country level, I use the poverty gap to approximate the revenues required to eliminate poverty. 
 More specifically, I consider taxes on top incomes to finance a transfer to the poorest that would lift them at the poverty line. I consider two types of redistributive policies to close the poverty gap: (i) an ``antipoverty cap'' that would establish a ceiling on top incomes (and tax income at a 100\% rate above that threshold); (ii) an ``antipoverty tax'' that would raise a linear tax above a certain threshold. 
 
-These policies are idealized. The estimate of revenue they generate should be seen as an upper bound of what could be achieved in practice, if they were implemented. % TODO? invert if/in?
+These policies are idealized. The estimate of revenue they generate should be seen as an upper bound of what could be achieved if they were implemented in practice. 
 First, I ignore any costs associated with raising a tax or transferring money, as if the lowest-income countries already had sufficient administrative resources. Second, any tax (and a fortiori a 100\% tax) reduces economic activity (real or declared). In this exercise, I abstract from tax distorsions and assume that the policies would not affect the taxable base.% shorten (take out this or the following paragraph)
 
 If it were possible to expropriate top income individuals 
@@ -409,7 +406,7 @@ Figure \ref{fig:demogrant_7__10} presents the income floor that can funded in 20
 %Although there are about as many countries that cannot close the extreme poverty gap with this tax (23) as there are low-income countries (27), only 13 countries fall into both of these groups. 
 For example, while Ethiopia (a low-income country) can finance an income floor of \$3.08/day, Nigeria (classified as a lower-middle-income country) can only finance a floor of \$1.83/day. 
 
-Even in a scenario with 7\% growth from 2023 onwards, 10 countries have an income floor below \$2.15 in 2030. Note that the picture does not significantly change when adjusting top incomes so that aggregate consumption matches national accounts: % \cite{deaton_measuring_2005,prydz_disparities_2022} TODO
+Even in a scenario with 7\% growth from 2023 onwards, 10 countries have an income floor below \$2.15 in 2030. Note that the picture does not significantly change when adjusting top incomes so that aggregate consumption matches national accounts:\cite{deaton_measuring_2005,prydz_disparities_2022} 
 8 countries are still unable to close the extreme poverty gap despite very optimistic growth in this robustness check. In contrast, if the 7\% growth had started in 2016 (as the SDGs were set up), the 10\% tax would have been sufficient to eliminate extreme poverty in all countries except in Madagascar, where a tax of 23\% would have been required.
 
 At least two of the SDGs spell out how the elimination of extreme poverty could be funded. % https://sdgs.un.org/2030agenda
@@ -436,9 +433,9 @@ With contributions of up to 0.4\% of a country's income (in the U.S.), aggregate
 % These rates are expressed on top of the current tax system and apply to post-tax income. For example, the last tax schedule would leave unaffected the 96\% of the world population with a post-tax income per capita below \$3,000/month, reduce by 10\% the post-tax income at \$5,000/month, and reduce it  by 37\% at \$10,000/month. 
 
 % TODO! I can't use the HFCE-rescaled results if I attribute all extra income to the top 1% => Add orders of magnitude for global wealth tax + in NS version, keep only the wealth tax (bc HFCE entirely attributed to >100$/d leads to net losses in HMICs and wo HFCE losses are too high in HICs) 
-In reality, the global tax rates required to eradicate poverty may well be lower than just indicated, because our calculations used the raw PIP data instead of converting them to nominal terms and rescaling them to national accounts. Once I rescale the data to national accounts (which are more accurate than surveys in high-income countries), % TODO? cite?
+In reality, the global tax rates required to eradicate poverty may well be lower than just indicated, because our calculations used the raw PIP data instead of converting them to nominal terms and rescaling them to national accounts. Once I rescale the data to national accounts, (which are more accurate in high-income countries), 
 a mild 0.3\% marginal tax above \$100/day suffices to close the extreme poverty gap. Raising that rate to 10\% would collect 3.4\% of the world income, enough to finance a global income floor of \$7/day and end poverty in all its forms. 
-These rates are expressed on top of the current tax system and apply to post-tax income. For example, the last tax schedule would leave unaffected the 95\% of the world population with a post-tax income per capita below \$36,500/year and reduce by 5\% the post-tax income at \$73,000/year. % TODO? those with...?
+These rates are expressed on top of the current tax system and apply to post-tax income. For example, the last tax schedule would leave unaffected the 95\% of the world's population whose per capita after-tax income is less than \$36,500/year, and would reduce the after-tax income of those at \$73,000/year by 5\%. 
 % TODO? Use ws instead of w? 
 
 % 6.85 pg: 4.5% (less in nominal); 2.15 pg: .15%
@@ -464,9 +461,9 @@ so even if it reproduces the Chinese miracle, it cannot eradicate extreme povert
 In contrast, international solidarity could end poverty more quickly and at a much lower welfare cost. In this paper, I have illustrated the magnitude of the required transfer of resources with idealized international taxes, but in reality this could take other forms such as a systemic change in the rules or structures of the world economy. 
 To be fair, this paper only presents the orders of magnitude of global inequality. %Poverty is multidimensional and t
 In practice, structural factors (like wars or corruption) that sustain poverty %, corruption, or deficient administrative capacity). 
-can also hamper the effectiveness of international action. 
-To mobilize international solidarity, research is needed to design %can help design % uncovering?
-concrete, effective policies to distribute resources to the poorest. % TODO: rewrite last sentence
+can also hamper the effectiveness of international action. %research can help design % uncovering?
+While concrete policy proposals have the potential % If... are the way
+to mobilize international solidarity,\cite{fabre_international_2023} research can help design effective policies to distribute resources to the poorest.
 % “As things stand, the world is not on track to end poverty by 2030,” (UN, 22)
 % # World Bank (2022): "It became clear that the global goal of ending extreme poverty by 2030 would not be achieved."
 % Paper shows that extreme poverty will not be eradicated in 2030 unless international transfers. 
