--- a/paper/NS_appendix.tex
+++ b/paper/NS_appendix.tex
@@ -82,8 +82,8 @@
 
 % \tableofcontents
 % \clearpage
-\listoftables
 \listoffigures
+\listoftables
 
 \appendix % NCCcomment
 \renewcommand{\thetable}{A\arabic{table}}
@@ -185,6 +185,6 @@ Many more figures (with varying poverty lines, taxation thresholds, growth scena
 \input{../tables/tax4.tex}
 \input{../tables/tax7.tex}
 \input{../tables/floor.tex}
-\input{../tables/gain.tex}
+% \input{../tables/gain.tex}
 
 \end{document}
