--- a/tables/gain.tex
+++ b/tables/gain.tex
@@ -1,7 +1,7 @@
 \begin{table}[b]
 
 \caption[Net gain per country of global antipoverty taxes.]{\label{tab:gain}Net gain per country of a global antipoverty tax above \$100/day, for most populous countries in 2030 after 3\%
-growth since 2022.}
+growth since 2022. \small{\textit{Note that revenues are likely underestimated without HFCE rescaling, and the cost overestimated in lower-income countries with HFCE rescaling (as the extra income is wrongly attributed to the sole top 1\%, which often concentrates the entire taxable base).}}}
 \centering
 \begin{tabular}[t]{lrrrrrr}
 \toprule Tax rate & 1.2\% & 1.2\% & 0.3\% & 0.3\% & 10\% & 10\%  \\ 
@@ -33,7 +33,6 @@ Italy & -0.15 & -0.25 & -0.04 & -0.06 & -1.30 & -2.25\\
 Japan & -0.14 & -0.25 & -0.04 & -0.07 & -1.15 & -2.12\\
 Kenya & 1.05 & 1.92 & 0.19 & 0.36 & 11.05 & 14.07\\
 Mexico & 0.01 & -0.57 & 0.00 & -0.14 & 0.12 & -4.45\\
-Morocco & -0.01 & -0.02 & 0.00 & -0.03 & 0.30 & 1.76\\
 Mozambique & 12.59 & 28.74 & 4.08 & 10.77 & 52.87 & 103.65\\
 Myanmar & 0.03 & 0.35 & 0.00 & 0.01 & 1.93 & 12.30\\
 Nigeria & 2.51 & 9.51 & 0.39 & 2.10 & 22.09 & 59.44\\
