--- a/paper/NS_appendix.tex
+++ b/paper/NS_appendix.tex
@@ -92,7 +92,7 @@
 \setcounter{table}{0}
 
 \clearpage
-\section{Additional figures}
+\section{Supplementary figures}
 
 Many more figures (with varying poverty lines, taxation thresholds, growth scenarios, etc.) are available on \href{https://github.com/bixiou/domestic_poverty_eradication/tree/main/figures}{github.com/bixiou/domestic\_poverty\_eradication}. Also, any custom figure can be easily produced using this code.
 
@@ -177,7 +177,7 @@ Many more figures (with varying poverty lines, taxation thresholds, growth scena
   {../figures/s_demogrant_7__10.pdf}}
 \end{figure}
 
-\section{Additional tables}
+\section{Supplementary tables}
 \input{../tables/income.tex}
 \input{../tables/trend.tex}
 \input{../tables/cap.tex}
