--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -146,8 +146,8 @@
 }
 
 @article{chancel_global_2021,
-  title = {Global {{Income Inequality}}, 1820{\textendash}2020: The {{Persistence}} and {{Mutation}} of {{Extreme Inequality}}},
-  shorttitle = {Global {{Income Inequality}}, 1820{\textendash}2020},
+  title = {Global {{Income Inequality}}, 1820--2020: The {{Persistence}} and {{Mutation}} of {{Extreme Inequality}}},
+  shorttitle = {Global {{Income Inequality}}, 1820--2020},
   author = {Chancel, Lucas and Piketty, Thomas},
   year = {2021},
   month = dec,
@@ -399,6 +399,23 @@
   url = {http://www.ssrn.com/abstract=2843630}
 }
 
+@article{hoy_global_2016,
+  title = {Global {{Poverty}} and {{Inequality}}: {{Is There New Capacity}} for {{Redistribution}} in {{Developing Countries}}?},
+  shorttitle = {Global {{Poverty}} and {{Inequality}}},
+  author = {Hoy, Chris and Sumner, Andy},
+  year = {2016},
+  month = jun,
+  journal = {Journal of Globalization and Development},
+  volume = {7},
+  number = {1},
+  pages = {117--157},
+  publisher = {{De Gruyter}},
+  issn = {1948-1837},
+  doi = {10.1515/jgd-2016-0021},
+  url = {https://www.degruyter.com/document/doi/10.1515/jgd-2016-0021/html},
+  copyright = {De Gruyter expressly reserves the right to use all content for commercial text and data mining within the meaning of Section 44b of the German Copyright Act.}
+}
+
 @incollection{imf_chapter_2014,
   title = {Chapter 5. {{Medium-Term Forecasts}}},
   booktitle = {{{IEO Evaluation Report}}},
@@ -442,7 +459,7 @@
   issn = {2040-0209},
   doi = {10.1111/j.2040-0209.2012.00398.x},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.2040-0209.2012.00398.x},
-  copyright = {{\textcopyright} 2012 Institute of Development Studies}
+  copyright = {{\copyright} 2012 Institute of Development Studies}
 }
 
 @article{kerner_does_2017,
@@ -701,7 +718,7 @@
   issn = {1475-4991},
   doi = {10.1111/roiw.12362},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/roiw.12362},
-  copyright = {{\textcopyright} 2018 International Association for Research in Income and Wealth}
+  copyright = {{\copyright} 2018 International Association for Research in Income and Wealth}
 }
 
 @techreport{oecd_bottlenecks_2023,
@@ -782,7 +799,7 @@
   issn = {1475-4991},
   doi = {10.1111/roiw.12577},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/roiw.12577},
-  copyright = {{\textcopyright} 2022 International Association for Research in Income and Wealth}
+  copyright = {{\copyright} 2022 International Association for Research in Income and Wealth}
 }
 
 @article{ravallion_how_2013,
