--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -242,7 +242,7 @@ Consistently with Ravallion (2010), Hoy \& Sumner (2016) find that 52\% of globa
 
 Previous studies also show that with growth alone, and if each country's growth persists at the same level, it would take more than a century --- and a global GDP exceeding \$100,000 per year --- to end extreme poverty.\cite{woodward_incrementum_2015} % TODO? cite ravallion_how_2013 on this? or on paragraph below? It is not as good as it just extends the trends of poverty headcounts
 % Ortiz et al. (2018) estimate the cost relative to GDP of a basic income at the national poverty line. % shorten
-In low-income countries, financing a basic income at the poverty line is out of reach as the national poverty line is on average equal to 79\% of the GDP, and 8 countries have a GDP below this line (which is often itself below \$2.15/day).\cite{ortiz_universal_2018}
+In low-income countries, financing a basic income at the poverty line is out of reach as the national poverty line is on average equal to 79\% of the GDP and 8 countries have a GDP below this line (which is often itself below \$2.15/day).\cite{ortiz_universal_2018}
 % Difference with Hoy & Sumner (16) (who do almost the same thing (and even include reallocation of fuel subsidies and excess military spending), take 50% marginal tax > 10$/d as maximum);
 % Ortiz et al (18) ( computing the costs of an UBI at the national poverty line (Figure 2, 3)). 
 
@@ -462,11 +462,12 @@ In a nutshell, whereas poverty alleviation cannot be achieved rapidly without in
 
 To paraphrase the UN, ``as things stand, the world is not on track to end poverty by 2030.''\cite{un_sustainable_2022} I have shown that the only prospect for low-income countries to eliminate extreme poverty on their own is the combination of strong growth, ambitious policies of social programs and internal redistribution, and time. 
 With record growth and profound government committment, China has officially eradicated extreme poverty in 2021. The D.R.C. is poorer now than China in 1990, % https://data.worldbank.org/indicator/SI.POV.DDAY?locations=CD-CN-AE, https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD?locations=ET-CN-CD
-so even if it reproduces the Chinese miracle, it cannot eradicate extreme poverty on its own before 2055. 
+so even if it reproduces the Chinese miracle, it will not be able to eradicate extreme poverty on its own before 2055. 
 In contrast, international solidarity could end poverty more quickly and at a much lower welfare cost. In this paper, I have illustrated the magnitude of the required transfer of resources with idealized international taxes, but in reality this could take other forms such as a systemic change in the rules or structures of the world economy. 
 To be fair, this paper only presents the orders of magnitude of global inequality. %Poverty is multidimensional and t
-In practice, structural factors (like wars or corruption) that sustain poverty %, corruption, or deficient administrative capacity). 
+In practice, structural factors that sustain poverty (like wars or corruption) %, corruption, or deficient administrative capacity). 
 can also hamper the effectiveness of international action. %research can help design % uncovering?
+
 While concrete policy proposals have the potential % If... are the way
 to mobilize international solidarity,\cite{fabre_international_2023} research can help design effective policies to distribute resources to the poorest.
 % “As things stand, the world is not on track to end poverty by 2030,” (UN, 22)
