--- a/paper/NS_poverty.tex
+++ b/paper/NS_poverty.tex
@@ -6,6 +6,8 @@
 % Legend: 177
 % Headers: 27
 
+% TODO? replace Hoy & Sumner citation by the published paper
+
 %% Comment "% NCCcomment" lines, uncomment "% WPcomment" lines as well as the lines below
 \documentclass[12pt,english]{article}
 \usepackage[utf8]{inputenc}
@@ -152,7 +154,7 @@ Consistently with Ravallion (2010), Hoy \& Sumner (2016) find that 52\% of globa
 
 Previous studies also show that with growth alone, and if each country's growth persists at the same level, it would take more than a century --- and a global GDP exceeding \$100,000 per year --- to end extreme poverty.\cite{woodward_incrementum_2015} % TODO? cite ravallion_how_2013 on this? or on paragraph below? It is not as good as it just extends the trends of poverty headcounts
 % Ortiz et al. (2018) estimate the cost relative to GDP of a basic income at the national poverty line. % shorten
-In low-income countries, financing a basic income at the poverty line is out of reach as the national poverty line is on average equal to 79\% of the GDP, and 8 countries have a GDP below this line (which is often itself below \$2.15/day).\cite{ortiz_universal_2018}
+In low-income countries, financing a basic income at the poverty line is out of reach as the national poverty line is on average equal to 79\% of the GDP and 8 countries have a GDP below this line (which is often itself below \$2.15/day).\cite{ortiz_universal_2018}
 % Difference with Hoy & Sumner (16) (who do almost the same thing (and even include reallocation of fuel subsidies and excess military spending), take 50% marginal tax > 10$/d as maximum);
 % Ortiz et al (18) ( computing the costs of an UBI at the national poverty line (Figure 2, 3)). 
 
@@ -167,8 +169,8 @@ per year. With the current trend, the SDGs will not be achieved and only limited
 Low-income countries do not have the resources to afford basic healthcare, education, and social protection; only an increase and a redirection of Official Development Assistance (ODA) can finance these programs.\cite{manuel_financing_2018} 
 
 \section{Results}
-\section{Data}\label{subsec:data}
-The percentiles of each country's post-tax income (or consumption) in purchasing power parity (PPP) are estimated from household surveys by the Poverty and Inequality Platform (PIP) of the World Bank (ex-PovcalNet) and given in constant 2017 \$.
+\subsection{Data}\label{subsec:data}
+The percentiles of each country's post-tax income (or consumption) in purchasing power parity (PPP) are given in constant 2017 \$ by the Poverty and Inequality Platform (PIP) of the World Bank (ex-PovcalNet), unifying national household surveys.
 
 \subsection{The effect of balanced growth}
 
@@ -323,11 +325,12 @@ In a nutshell, whereas poverty alleviation cannot be achieved rapidly without in
 
 To paraphrase the UN, ``as things stand, the world is not on track to end poverty by 2030.''\cite{un_sustainable_2022} I have shown that the only prospect for low-income countries to eliminate extreme poverty on their own is the combination of strong growth, ambitious policies of social programs and internal redistribution, and time. 
 With record growth and profound government committment, China has officially eradicated extreme poverty in 2021. The D.R.C. is poorer now than China in 1990, % https://data.worldbank.org/indicator/SI.POV.DDAY?locations=CD-CN-AE, https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD?locations=ET-CN-CD
-so even if it reproduces the Chinese miracle, it cannot eradicate extreme poverty on its own before 2055. 
+so even if it reproduces the Chinese miracle, it will not be able to eradicate extreme poverty on its own before 2055. 
 In contrast, international solidarity could end poverty more quickly and at a much lower welfare cost. In this paper, I have illustrated the magnitude of the required transfer of resources with idealized international taxes, but in reality this could take other forms such as a systemic change in the rules or structures of the world economy. 
 To be fair, this paper only presents the orders of magnitude of global inequality. %Poverty is multidimensional and t
-In practice, structural factors (like wars or corruption) that sustain poverty %, corruption, or deficient administrative capacity). 
+In practice, structural factors that sustain poverty (like wars or corruption) %, corruption, or deficient administrative capacity). 
 can also hamper the effectiveness of international action. %research can help design % uncovering?
+
 While concrete policy proposals have the potential % If... are the way
 to mobilize international solidarity,\cite{fabre_international_2023} research can help design effective policies to distribute resources to the poorest.
 % “As things stand, the world is not on track to end poverty by 2030,” (UN, 22)
@@ -364,6 +367,7 @@ These methods include: extending the 2014--2019 growth trend (which excludes COV
 
 All data and code of as well as figures of the paper are available on \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. 
 
+\clearpage
 % \end{methods} % WPcomment
 \end{small}  % NCCcomment
 
