--- a/paper/NS_poverty.tex
+++ b/paper/NS_poverty.tex
@@ -7,6 +7,7 @@
 % Headers: 27
 
 % TODO? replace Hoy & Sumner citation by the published paper
+% TODO! vérifier chiffres papiers
 
 %% Comment "% NCCcomment" lines, uncomment "% WPcomment" lines as well as the lines below
 \documentclass[12pt,english]{article}
