--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -146,8 +146,8 @@
 }
 
 @article{chancel_global_2021,
-  title = {Global {{Income Inequality}}, 1820{\textendash}2020: The {{Persistence}} and {{Mutation}} of {{Extreme Inequality}}},
-  shorttitle = {Global {{Income Inequality}}, 1820{\textendash}2020},
+  title = {Global {{Income Inequality}}, 1820--2020: The {{Persistence}} and {{Mutation}} of {{Extreme Inequality}}},
+  shorttitle = {Global {{Income Inequality}}, 1820--2020},
   author = {Chancel, Lucas and Piketty, Thomas},
   year = {2021},
   month = dec,
@@ -292,6 +292,16 @@
   url = {https://www.jstor.org/stable/4017680}
 }
 
+@article{fabre_international_2023,
+  title = {International {{Attitudes Toward Global Policies}}},
+  author = {Fabre, Adrien and Douenne, Thomas and Mattauch, Linus},
+  year = {2023},
+  journal = {FAERE Working Paper},
+  issn = {1556-5068},
+  doi = {10.2139/ssrn.4448523},
+  url = {https://www.ssrn.com/abstract=4448523}
+}
+
 @techreport{gradin_trends_2021,
   type = {Working {{Paper}}},
   title = {Trends in Global Inequality Using a New Integrated Dataset},
@@ -387,6 +397,23 @@
   issn = {1556-5068},
   doi = {10.2139/ssrn.2843630},
   url = {http://www.ssrn.com/abstract=2843630}
+}
+
+@article{hoy_global_2016,
+  title = {Global {{Poverty}} and {{Inequality}}: {{Is There New Capacity}} for {{Redistribution}} in {{Developing Countries}}?},
+  shorttitle = {Global {{Poverty}} and {{Inequality}}},
+  author = {Hoy, Chris and Sumner, Andy},
+  year = {2016},
+  month = jun,
+  journal = {Journal of Globalization and Development},
+  volume = {7},
+  number = {1},
+  pages = {117--157},
+  publisher = {{De Gruyter}},
+  issn = {1948-1837},
+  doi = {10.1515/jgd-2016-0021},
+  url = {https://www.degruyter.com/document/doi/10.1515/jgd-2016-0021/html},
+  copyright = {De Gruyter expressly reserves the right to use all content for commercial text and data mining within the meaning of Section 44b of the German Copyright Act.}
 }
 
 @incollection{imf_chapter_2014,
@@ -705,7 +732,7 @@
   title = {{{ODA Levels}} in 2022},
   author = {OECD, .},
   year = {2023},
-  url = {https://www.oecd.org/dac/financing-sustainable-development/ODA-2022-summary.pdf}
+  url = {https://www.oecd.org/dac/financing-sustainable-development/development-finance-data/}
 }
 
 @article{ortiz_universal_2018,
@@ -717,6 +744,17 @@
   issn = {1556-5068},
   doi = {10.2139/ssrn.3208737},
   url = {https://www.ssrn.com/abstract=3208737}
+}
+
+@book{piketty_brief_2022,
+  title = {{A Brief History of Equality}},
+  author = {Piketty, Thomas},
+  translator = {Rendall, Steven},
+  year = {2022},
+  month = apr,
+  publisher = {{Belknap Press: An Imprint of Harvard University Press}},
+  address = {{Cambridge, Massachusetts}},
+  isbn = {978-0-674-27355-9}
 }
 
 @misc{pinkovskiy_parametric_2009,
@@ -882,6 +920,13 @@
   issn = {1356-3467},
   doi = {10.1080/13563467.2023.2217087},
   url = {https://doi.org/10.1080/13563467.2023.2217087}
+}
+
+@techreport{tax_observatory_global_2024,
+  title = {Global {{Tax Evasion}} Report},
+  author = {Tax Observatory, {\relax EU}},
+  year = {2024},
+  url = {https://www.taxobservatory.eu//www-site/uploads/2023/10/global\_tax\_evasion\_report\_24.pdf}
 }
 
 @techreport{un_sustainable_2022,
