--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -1,3 +1,6 @@
+% TODO! appendix with WID cainc data
+% TODO cite Sullivan et al 2023
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% NATURE CLIMATE CHANGE FORMAT %%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -250,7 +253,7 @@ The paper also relates to estimates of future poverty rates based on growth alon
 % Lit on future poverty rate: Karver et al. (12): IMF proj - 1pp, Chandy et al. (13) EIU - 10%, Bicaba et al. (17) EIU - 10%, Lakner et al. (22): Reducing each country’s Gini index by 1% per year has a larger impact on global poverty than increasing each country’s annual growth 1 percentage point above forecasts; on future global income distrib, Hellebrandt & Mauro (15): IMF proj and one sensitivity analysis with 0.84+0.35*(past growth)
 
 The paper is linked to the literature that estimates the global income distribution.\cite{pinkovskiy_parametric_2009,anand_chapter_2015,lahoti_global_2016,lakner_global_2016,gradin_trends_2021,jorda_global_2019,alvaredo_methods_2021} 
-% I prefer PIP to alternatives because the GCIP database has been discontinued;\cite{lahoti_global_2016} WIID adjusts its data to GDP (while HFCE is more relevant to us);\cite{gradin_trends_2021} WID only covers 38 countries with post-tax data.\cite{alvaredo_methods_2021} % TODO? include?
+% I prefer PIP to alternatives because the GCIP database has been discontinued;\cite{lahoti_global_2016} WIID adjusts its data to GDP (while HFCE is more relevant to us);\cite{gradin_trends_2021} WID has only wide coverage for post-tax national income (diinc) rather than post-tax disposable income (cainc, without public spending).\cite{alvaredo_methods_2021} % TODO? include?
 % Lit on global income distr: Cite GCIP (Lahoti et al., 16), WIID (Gradín, 21) and WID as alternative sources
 % # Cite Lakner & Milanovic (16): on HFCE adjustment, Anand & Segal (15) on estimating global income distribution: "Between-country inequality is the larger component of global inequality, comprising 64–81% of overall inequality"; and Pinkovskiy & Sala-i-Martin (09), Jordá & Niño-Zarazúa (19) on parametric estimates of global distribution. => TODO? cite in some sentences for the HFCE adjustment?
 It also connects with the costing and progress assessment of SDGs and in particular poverty eradication.\cite{schmidt-traub_investment_2015,rozenberg_beyond_2019,sdsn_sdg_2019,manuel_financing_2020,vorisek_understanding_2020,unctad_estimating_2021,un_sustainable_2022} In 24 countries, a growth rate of 7\% would not suffice to eradicate extreme poverty by 2030.\cite{unctad_estimating_2021} While the global cost of achieving the SDGs may be as high as \$4 trillion per year,\cite{unctad_world_2023} % also oecd_bottlenecks_2023
