--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -201,9 +201,9 @@
 % \begin{small} % NCCcomment
 \begin{abstract}
 % 144/150 words
-In 2015, the Sustainable Development Goals set the eradication of extreme poverty by 2030 as a universally agreed objective. 
-This paper analyses the prospects for achieving this goal country by country. Without redistribution, even with a very optimistic annual growth rate of 7\% between 2022 and 2030, 3\% of humans would still be living in extreme poverty in 2030. National capacity to eradicate poverty is then measured using the concepts of \textit{antipoverty cap} or \textit{antipoverty tax} required to finance poverty eradication, and \textit{income floor} (financed by a given income tax). With credible annual growth of 3\%, even capping incomes at \$7 a day cannot eradicate extreme poverty in 5 low-income countries. In other words, neither growth alone nor growth combined with radical internal redistribution could eradicate extreme poverty by 2030. By contrast, a transfer of just 0.14\% of global income could achieve this goal.
+In 2015, the Sustainable Development Goals set the eradication of extreme poverty by 2030 as a universally agreed objective. This paper analyses the prospects for achieving this goal country by country. Without redistribution, even with a very optimistic annual growth rate of 7\% between 2022 and 2030, 3\% of humans would still be living in extreme poverty in 2030. National capacity to eradicate poverty is then measured using the concepts of \textit{antipoverty cap} or \textit{antipoverty tax} required to finance poverty eradication, and \textit{income floor} (financed by a given income tax). With credible annual growth of 3\%, even capping incomes at \$7 a day cannot eradicate extreme poverty in 5 low-income countries. In other words, neither growth alone nor growth combined with radical internal redistribution could eradicate extreme poverty by 2030. By contrast, a transfer of just 0.14\% of global income could achieve this goal.
 \end{abstract}
+% In 2015, the Sustainable Development Goals set the eradication of extreme poverty by 2030 as a universally agreed objective. This paper analyses the prospects for achieving this goal country by country. Without redistribution, even with a very optimistic annual growth rate of 7% between 2022 and 2030, 3% of humans would still be living in extreme poverty in 2030. National capacity to eradicate poverty is then measured using the concepts of antipoverty cap or antipoverty tax required to finance poverty eradication, and income floor (financed by a given income tax). With credible annual growth of 3%, even capping incomes at $7 a day cannot eradicate extreme poverty in 5 low-income countries. In other words, neither growth alone nor growth combined with radical internal redistribution could eradicate extreme poverty by 2030. By contrast, a transfer of just 0.14% of global income could achieve this goal.
 
 % \textbf{JEL codes:} D63, I32, P16.
 % \textbf{Keywords:} Domestic resource mobilization, Poverty gap, Fiscal capacity, Sustainable Development Goals, Redistribution, Extreme poverty.
